--- a/src/shared/styles/shared/_variable.scss
+++ b/src/shared/styles/shared/_variable.scss
@@ -1,4 +1,8 @@
-$X_LARGE_SCREEN_WIDTH: 1366;
+$XXX_LARGE_SCREEN_WIDTH: 1960;
+$XX_LARGE_SCREEN_WIDTH: 1440;
+$X_LARGE_SCREEN_WIDTH: 1280;
 $LARGE_SCREEN_WIDTH: 1024;
 $MEDIUM_SCREEN_WIDTH: 768;
 $SMALL_SCREEN_WIDTH: 375;
+
+$REM_SIZE: 16;
